# transcribe-and-test

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  translate.py
src/transcribe_test/: config.py
src/transcribe_test/dto/: confluence_remote_link_dto.py  jira_issue_dto.py  jira_user_dto.py
src/transcribe_test/gui/: actions.py  layouts.py  widget.py
src/transcribe_test/service/: jira_service.py  translator.py
src/transcribe_test/utils/: content_util.py  encryption.py  request_sender.py
